--- a/src/back/feedback/face-tracing/environment.yml
+++ b/src/back/feedback/face-tracing/environment.yml
@@ -3,143 +3,15 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - alsa-lib=1.2.3
-  - aom=3.2.0
-  - brotlipy=0.7.0
-  - bzip2=1.0.8
-  - c-ares=1.18.1
-  - ca-certificates=2021.10.8
-  - cairo=1.16.0
-  - certifi=2021.10.8
-  - cffi=1.15.0
-  - charset-normalizer=2.0.11
-  - cryptography=36.0.1
-  - dbus=1.13.6
-  - dlib=19.22.0
-  - expat=2.4.4
-  - ffmpeg=4.4.1
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=3.000
-  - font-ttf-source-code-pro=2.038
-  - font-ttf-ubuntu=0.83
-  - fontconfig=2.13.94
-  - fonts-conda-ecosystem=1
-  - fonts-conda-forge=1
-  - freeglut=3.2.1
-  - freetype=2.10.4
-  - gettext=0.19.8.1
-  - gmp=6.2.1
-  - gnutls=3.6.13
-  - graphite2=1.3.13
-  - gst-plugins-base=1.18.5
-  - gstreamer=1.18.5
-  - harfbuzz=3.3.1
-  - hdf5=1.12.1
-  - icu=69.1
-  - idna=3.3
-  - jasper=2.0.33
-  - jbig=2.1
-  - jpeg=9e
-  - krb5=1.19.2
-  - lame=3.100
-  - ld_impl_linux-64=2.36.1
-  - lerc=3.0
-  - libblas=3.9.0
-  - libcblas=3.9.0
-  - libclang=13.0.0
-  - libcurl=7.81.0
-  - libdeflate=1.8
-  - libdrm=2.4.109
-  - libedit=3.1.20191231
-  - libev=4.33
-  - libevent=2.1.10
-  - libffi=3.4.2
-  - libgcc-ng=11.2.0
-  - libgfortran-ng=11.2.0
-  - libgfortran5=11.2.0
-  - libglib=2.70.2
-  - libglu=9.0.0
-  - libgomp=11.2.0
-  - libiconv=1.16
-  - liblapack=3.9.0
-  - liblapacke=3.9.0
-  - libllvm13=13.0.1
-  - libnghttp2=1.46.0
-  - libnsl=2.0.0
-  - libogg=1.3.4
-  - libopenblas=0.3.18
-  - libopencv=4.5.5
-  - libopus=1.3.1
-  - libpciaccess=0.16
-  - libpng=1.6.37
-  - libpq=14.1
-  - libprotobuf=3.19.4
-  - libssh2=1.10.0
-  - libstdcxx-ng=11.2.0
-  - libtiff=4.3.0
-  - libuuid=2.32.1
-  - libva=2.13.0
-  - libvorbis=1.3.7
-  - libvpx=1.11.0
-  - libwebp-base=1.2.2
-  - libxcb=1.13
-  - libxkbcommon=1.0.3
-  - libxml2=2.9.12
-  - libzlib=1.2.11
-  - lz4-c=1.9.3
-  - mysql-common=8.0.28
-  - mysql-libs=8.0.28
-  - ncurses=6.3
-  - nettle=3.6
-  - nspr=4.32
-  - nss=3.74
   - numpy=1.22.2
   - opencv=4.5.5
-  - openh264=2.1.1
-  - openssl=1.1.1l
   - pandas=1.4.0
   - pcre=8.45
   - pip=22.0.3
-  - pixman=0.40.0
-  - pthread-stubs=0.4
-  - py-opencv=4.5.5
-  - pycparser=2.21
-  - pyopenssl=22.0.0
   - pysocks=1.7.1
   - python=3.8.12
   - python-dateutil=2.8.2
   - python_abi=3.8
-  - pytz=2021.3
-  - qt=5.12.9
-  - readline=8.1
-  - requests=2.27.1
-  - setuptools=60.7.1
-  - six=1.16.0
-  - sqlite=3.37.0
-  - svt-av1=0.9.0
-  - tk=8.6.11
+  - dlib=19.22.0
   - urllib3=1.26.8
-  - wheel=0.37.1
-  - x264=1!161.3030
-  - x265=3.5
-  - xorg-fixesproto=5.0
-  - xorg-inputproto=2.3.2
-  - xorg-kbproto=1.0.7
-  - xorg-libice=1.0.10
-  - xorg-libsm=1.2.3
-  - xorg-libx11=1.7.2
-  - xorg-libxau=1.0.9
-  - xorg-libxdmcp=1.1.3
-  - xorg-libxext=1.3.4
-  - xorg-libxfixes=5.0.3
-  - xorg-libxi=1.7.10
-  - xorg-libxrender=0.9.10
-  - xorg-renderproto=0.11.1
-  - xorg-xextproto=7.3.0
-  - xorg-xproto=7.0.31
-  - xz=5.2.5
-  - zlib=1.2.11
-  - zstd=1.5.2
-prefix: /home/jaeo/anaconda3/envs/face-test
+# prefix: /home/jaeo/anaconda3/envs/face-test
