--- a/src/front/package.json
+++ b/src/front/package.json
@@ -12,6 +12,7 @@
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-webcam": "^7.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
