--- a/src/front/package.json
+++ b/src/front/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
     "react-webcam": "^7.0.1",
+    "recharts": "^2.1.9",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
