--- a/src/front/package.json
+++ b/src/front/package.json
@@ -2,6 +2,7 @@
   "name": "in4u-web",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://user-interview-video-bucket.s3.amazonaws.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
